[gd_scene load_steps=12 format=3 uid="uid://ct2nffxtjodm8"]

[ext_resource type="Script" uid="uid://do8onfhooka3r" path="res://scenes/puntajesGlobales/ranking_globales.gd" id="1_eat35"]
[ext_resource type="Texture2D" uid="uid://d0vxcs6jpwl8e" path="res://assets/texturasgenericas/grey_panel.png" id="1_mk8s0"]
[ext_resource type="FontFile" uid="uid://b2lderbh3o76w" path="res://assets/fuentes/AtkinsonHyperlegible-Bold.ttf" id="3_0dtnw"]
[ext_resource type="Texture2D" uid="uid://5el60unpnqtf" path="res://assets/botones_textura/red_button01.png" id="4_x8wv2"]
[ext_resource type="Texture2D" uid="uid://cake3pvtyxtid" path="res://assets/botones_textura/red_button02.png" id="5_uqmip"]
[ext_resource type="Texture2D" uid="uid://bvg0vr6luncyk" path="res://assets/botones_textura/blue_button02.png" id="6_x8wv2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tv7ho"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6d8hy"]
texture = ExtResource("4_x8wv2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k6fwu"]
texture = ExtResource("5_uqmip")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gdjbx"]
texture = ExtResource("4_x8wv2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uqmip"]
texture = ExtResource("6_x8wv2")

[node name="rankingGlobal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eat35")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -73.0
offset_top = -129.0
offset_right = 93.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_mk8s0")

[node name="HTTPRequestRanking" type="HTTPRequest" parent="."]

[node name="HTTPRequestScore" type="HTTPRequest" parent="."]

[node name="volver" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.504
anchor_top = 0.934
anchor_right = 0.504
anchor_bottom = 0.934
offset_left = -145.88
offset_top = -65.52
offset_right = 146.12
offset_bottom = 65.48
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0dtnw")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxTexture_tv7ho")
theme_override_styles/hover = SubResource("StyleBoxTexture_6d8hy")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k6fwu")
theme_override_styles/normal = SubResource("StyleBoxTexture_gdjbx")
text = "Volver"

[node name="intento" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -25.0
offset_right = 65.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0dtnw")
theme_override_font_sizes/font_size = 40
text = "TEXTO"

[node name="Label1" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.522
anchor_top = 0.092
anchor_right = 0.522
anchor_bottom = 0.092
offset_left = -264.84
offset_top = -4.76
offset_right = 219.16
offset_bottom = 74.24
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0dtnw")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_uqmip")
text = "LABEL1"
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.522
anchor_top = 0.092
anchor_right = 0.522
anchor_bottom = 0.092
offset_left = -261.84
offset_top = 110.24
offset_right = 215.16
offset_bottom = 189.24
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0dtnw")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_uqmip")
text = "LABEL1"
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.522
anchor_top = 0.092
anchor_right = 0.522
anchor_bottom = 0.092
offset_left = -263.84
offset_top = 223.24
offset_right = 218.16
offset_bottom = 302.24
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0dtnw")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_uqmip")
text = "LABEL1"
vertical_alignment = 1

[node name="Label4" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.522
anchor_top = 0.092
anchor_right = 0.522
anchor_bottom = 0.092
offset_left = -264.84
offset_top = 339.24
offset_right = 216.16
offset_bottom = 418.24
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0dtnw")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_uqmip")
text = "LABEL1"
vertical_alignment = 1

[node name="Label5" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.522
anchor_top = 0.092
anchor_right = 0.522
anchor_bottom = 0.092
offset_left = -268.84
offset_top = 456.24
offset_right = 215.16
offset_bottom = 535.24
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0dtnw")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_uqmip")
text = "LABEL1"
vertical_alignment = 1

[node name="puntajejugador" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.5
offset_top = 224.0
offset_right = 188.5
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_0dtnw")
theme_override_font_sizes/font_size = 40
text = "PUNTAJE JUGADOR"

[connection signal="pressed" from="volver" to="." method="_on_volver_pressed"]
